--- a/inventory/templates/create.html
+++ b/inventory/templates/create.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>  
 <html lang="en">  
 <head>  
-    <meta charset="UTF-8">  
-    <title>Index</title>  
+    <title>Create</title>  
 </head>  
 <body>  
 <form method="POST" class="post-form" action="create">  
         {% csrf_token %}  
     <div class="container">  
-<br>  
-    <div class="form-group row">  
-    <label class="col-sm-1 col-form-label"></label>  
-    <div class="col-sm-4">  
-    <h3>Given ID</h3>  
-    </div>  
+<div class="form-group row">  
+  <label class="col-sm-1 col-form-label"></label>  
+  <div class="col-sm-4">  
+  <h3>Create New Item</h3>  
   </div>  
+</div>  
   <div class="form-group row">  
     <label class="col-sm-2 col-form-label">Item Name:</label>  
     <div class="col-sm-4">  
