--- a/inventory/templates/update.html
+++ b/inventory/templates/update.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>  
 <html lang="en">  
 <head>  
-    <meta charset="UTF-8">  
-    <title>Index</title>  
+    <title>Update</title>  
 </head>  
 <body>  
 <form method="POST" class="post-form" action="/inventory/update/{{inventory_selection.id}}">  
@@ -10,10 +9,7 @@
     <div class="container">  
 <br>  
     <div class="form-group row">  
-    <label class="col-sm-1 col-form-label"></label>  
-    <div class="col-sm-4">  
-    <h3>Update Details</h3>  
-    </div>  
+    <h3>Update Details</h3>   
   </div>  
   <div class="form-group row">  
     <label class="col-sm-2 col-form-label">Item Name:</label>  
