--- a/inventory/templates/update.html
+++ b/inventory/templates/update.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>  
+
 <html lang="en">  
+
 <head>  
+
     <title>Update</title>  
+
 </head>  
+
 <body>  
-<form method="POST" class="post-form" action="/inventory/update/{{inventory_selection.id}}">  
-        {% csrf_token %}  
-    <div class="container">  
-<br>  
-    <div class="form-group row">  
-    <h3>Update Details</h3>   
-  </div>  
-  <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Item Name:</label>  
-    <div class="col-sm-4">  
-        <input type="text" name="item_name" id="id_item_name" required maxlength="100" value="{{ inventory_selection.item_name }}" />  
-    </div>  
-  </div>  
-    <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Item Quantity:</label>  
-    <div class="col-sm-4">  
-        <input type="number" name="item_quantity" id="id_item_quantity" required maxlength="254" value="{{ inventory_selection.item_quantity }}" />  
-    </div>  
-  </div>  
-    <div class="form-group row">  
-    <label class="col-sm-1 col-form-label"></label>  
-    <div class="col-sm-4">  
-    <button type="submit" class="btn btn-success">Update</button>  
-    </div>  
-  </div>  
-    </div>  
-</form>  
+
+  <form method="POST" action="/inventory/update/{{inventory_selection.id}}">  
+
+          {% csrf_token %}  
+
+      <h3>Update Details</h3>   
+ 
+      Item Name:
+ 
+      <input type="text" name="item_name" required maxlength="255" value="{{ inventory_selection.item_name }}" />  
+
+      <br>
+
+      Item Quantity: 
+
+      <input type="number" name="item_quantity" value="{{ inventory_selection.item_quantity }}" />  
+
+      <br>
+
+      <button type="submit">Update</button>  
+
+  </form>  
+
+  <br>
+ 
+  <a href="/inventory/show">Return To All Item View</a>
+
 </body>  
+
 </html>  
